<resources>
    <string name="app_name">Playlist maker</string>
    <string name="title" translatable="false">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="help">Написать в поддрежку</string>
    <string name="license">Пользовательское соглашение</string>
</resources>