<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"

        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/regular_margin"
                android:layout_marginTop="14dp"
                android:textAllCaps="false"
                android:text="@string/title"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/regular_margin"
            android:layout_marginVertical="40dp"
            android:layout_marginEnd="@dimen/regular_margin"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/search"
                android:textAllCaps="false"
                android:textColor="@color/button_text"
                android:textSize="@dimen/text_size"
                app:cornerRadius="@dimen/radius"
                app:icon="@drawable/search"
                app:iconTint="@color/button_text"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/icon_padding"/>

            <Button
                android:id="@+id/button_media"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/regular_margin"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/media"
                android:textAllCaps="false"
                android:textColor="@color/button_text"
                android:textSize="@dimen/text_size"
                app:cornerRadius="@dimen/radius"
                app:icon="@drawable/media"
                app:iconTint="@color/button_text"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/icon_padding" />

            <Button
                android:id="@+id/button_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/regular_margin"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/settings"
                android:textAllCaps="false"
                android:textColor="@color/button_text"
                android:textSize="@dimen/text_size"
                app:cornerRadius="@dimen/radius"
                app:icon="@drawable/settings"
                app:iconTint="@color/button_text"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/icon_padding" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>